<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentasion.detail.DetailMovieActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgBackImage"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.SelectedCornerRadius"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimens_285dp"
            android:contentDescription="@string/label_back_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvBack"
            android:layout_width="@dimen/dimens_36dp"
            android:layout_height="@dimen/dimens_36dp"
            android:layout_marginStart="@dimen/dimens_24dp"
            android:layout_marginTop="@dimen/dimens_38dp"
            android:backgroundTint="@color/colorWhiteTransparent"
            app:cardCornerRadius="@dimen/dimens_6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/label_back_image" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvFavorite"
            android:layout_width="@dimen/dimens_36dp"
            android:layout_height="@dimen/dimens_36dp"
            android:layout_marginTop="@dimen/dimens_38dp"
            android:layout_marginEnd="@dimen/dimens_24dp"
            android:backgroundTint="@color/colorWhiteTransparent"
            app:cardCornerRadius="@dimen/dimens_6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgFavorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/label_back_image"
                    android:src="@drawable/ic_unfavorite"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPoster"
            android:layout_width="@dimen/dimens_130dp"
            android:layout_height="@dimen/dimens_172dp"
            android:layout_marginStart="@dimen/dimens_18dp"
            android:layout_marginTop="@dimen/dimens_240dp"
            app:cardCornerRadius="@dimen/dimens_6dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgPoster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/label_image_poster"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_16dp"
            android:layout_marginTop="@dimen/dimens_24dp"
            android:layout_marginEnd="@dimen/dimens_18dp"
            android:maxLines="1"
            android:text="@string/label_title"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cvPoster"
            app:layout_constraintTop_toBottomOf="@+id/imgBackImage"/>

        <ImageView
            android:id="@+id/imgRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_16dp"
            android:layout_marginTop="@dimen/dimens_4dp"
            android:src="@drawable/ic_rate"
            app:layout_constraintStart_toEndOf="@id/cvPoster"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            android:contentDescription="@string/label_image_rate"/>

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_6dp"
            android:layout_marginStart="@dimen/dimens_8dp"
            android:text="@string/label_rating"
            android:textColor="@color/colorGrey"
            app:layout_constraintStart_toEndOf="@+id/imgRate"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"/>

        <TextView
            android:id="@+id/tvOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_24dp"
            android:layout_marginTop="@dimen/dimens_24dp"
            android:text="@string/label_overview"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cvPoster"/>

        <TextView
            android:id="@+id/tvOverviewDesc"
            android:layout_width="@dimen/dimens_0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_24dp"
            android:layout_marginTop="@dimen/dimens_12dp"
            android:layout_marginEnd="@dimen/dimens_24dp"
            android:text="@string/label_overview"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOverview"/>

        <TextView
            android:id="@+id/tvSimilar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimens_24dp"
            android:layout_marginTop="@dimen/dimens_24dp"
            android:text="@string/label_similar"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOverviewDesc"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMovieSimilar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/movie_list_item"
            android:layout_marginStart="@dimen/dimens_16dp"
            android:layout_marginEnd="@dimen/dimens_16dp"
            android:layout_marginTop="@dimen/dimens_8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSimilar"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>